--- a/HotelBookingApp/HotelBooking.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Shared/_LoginPartial.cshtml
@@ -41,10 +41,10 @@ else
 {
 
     <li class="nav-item">
-        <a class="nav-link text register-button" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text register-button" style="margin-right: 1rem;" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text login-button" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link text login-button" style="margin-right: 15rem;" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
 </ul>
