--- a/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
@@ -43,23 +43,23 @@
         </main>
     </div>
 
-@*    <footer class="bg-dark text-light pt-5 pb-3">*@
+    <footer class="text-dark pt-5 pb-3">
         <div id="footer" class="container">
             <div class="row">
-                <div class="col-md-4 mb-4">
-                    <h5 class="text-uppercase">About Our App</h5>
+                <div class="col-md-4 mb-4 text-center">
+                    <h6 class="text-uppercase">About Our App</h6>
                     <p>Our booking hotels app helps travelers find the best deals on accommodations. We work with top hotels to provide the most competitive rates and help you save money on your next trip.</p>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <h5 class="text-uppercase">Contact Us</h5>
+                <div class="col-md-4 mb-4 text-center">
+                    <h6 class="text-uppercase">Contact Us</h6>
                     <ul class="list-unstyled">
                         <li>Email: info@easybook.com</li>
                         <li>Phone:089-133-8778</li>
                         <li>Address: 27 Main St, Sofia Bulgaira</li>
                     </ul>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <h5 class="text-uppercase">Follow Us</h5>
+                <div class="col-md-4 mb-4 text-center">
+                    <h6 class="text-uppercase">Follow Us</h6>
                     <ul class="list-unstyled">
                         <li>Facebook</li>
                         <li>Twitter</li>
@@ -73,10 +73,10 @@
             <div class="row mt-3">
                 <div class="col-md-12">
                     <hr class="bg-light">
-                    <p color="white" class="text-center">&copy; 2023 Booking Hotels App. All Rights Reserved.</p>
+                    <p color="white" class="text-center">&copy; 2025 Booking Hotels App. All Rights Reserved.</p>
                 </div>
         </div>
-@*    </footer>*@
+    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
