--- a/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav id = "navbar" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent box-shadow mb-3">
+        <nav id = "navbar" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color: white; font-weight: bold; margin-left: 14rem;">EasyBook</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
