--- a/HotelBookingApp/HotelBooking.Web/wwwroot/css/site.css
+++ b/HotelBookingApp/HotelBooking.Web/wwwroot/css/site.css
@@ -43,12 +43,13 @@ p, li,label{
 }
 .form-container {
     background-color: #ffb700;
-    display: flex;
+    display: inline-flex;
     flex-direction: row; 
     align-items: center !important;
     justify-content: center !important;
     border-radius: 5px;
-    width: 65.5%;
+    width: fit-content;
+    max-width: 100%;
     height: 3.1rem;
     margin: 0 auto;
 }
@@ -100,11 +101,6 @@ footer li, footer p{
 
 #footer .text-uppercase {
     margin-top: 20px;
-}
-
-span{
-    font-weight:bolder;
-    color: red;
 }
 
 .carousel-caption h5 {
