made small changes to the searched hotels

--- a/HotelBookingApp/HotelBooking.Web/Views/Home/Index.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container mt-5 mb-5">
     <h1>Find your next stay</h1>
-    <h4>Search low prices on hotels, homes and much more...</h4>
+    <h4 class="mb-5">Search low prices on hotels, homes and much more...</h4>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <style>
       /* Make all text inputs, date inputs, and selects the same height */
