--- a/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
@@ -37,13 +37,13 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container flex-grow-1">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="text-dark pt-5 pb-3">
+    <footer class="text-dark pt-5 pb-3 mt-auto">
         <div id="footer" class="container">
             <div class="row">
                 <div class="col-md-4 mb-4 text-center">
